# sgforge

./: .clang-format  CMakeLists.txt  Makefile  README.md
include/sgforge/: directory.h  header.h  unpack.h
src/: directory.c  header.c  main.c  unpack.c
