cmake_minimum_required(VERSION 3.10)
set(LIBRARY_NAME sgforge)
option(SGFORGE_INSTALL_TOOLS "Install sgforge binary" ON)
option(SGFORGE_INSTALL_LIB "Install sgforge library" ON)
project(${LIBRARY_NAME} C)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
set(CMAKE_INSTALL_MESSAGE LAZY)
if(UNIX OR APPLE)
    list(APPEND COMPILE_OPTIONS -Wall -Wextra -Wdeprecated -Wno-unused-parameter -Wno-sign-compare -Wshadow -Wnull-dereference -Wdouble-promotion -Wformat=2)
endif(UNIX OR APPLE)
add_library(${LIBRARY_NAME} STATIC ./src/unpack.c ./src/header.c ./src/directory.c)
target_include_directories(${LIBRARY_NAME} PRIVATE ./include)
set(FORGE_EXE ${LIBRARY_NAME}_creator)
add_executable(${FORGE_EXE} ./src/main.c ./src/pack.c)
target_link_libraries(${FORGE_EXE} PRIVATE ${LIBRARY_NAME})
target_include_directories(${FORGE_EXE} PUBLIC ./include)
set_target_properties(${FORGE_EXE} PROPERTIES OUTPUT_NAME sgforge)

if(SGFORGE_INSTALL_TOOLS) 
    install(TARGETS ${FORGE_EXE} RUNTIME DESTINATION bin) 
endif()

if(SGFORGE_INSTALL_LIB)
    install(TARGETS ${LIBRARY_NAME} ARCHIVE DESTINATION lib LIBRARY DESTINATION lib)
    install(DIRECTORY ./include/ DESTINATION include)
endif()
